@@ -48,7 +48,8 @@ enum
 	EPHY_NODE_PAGE_PROP_HOST_ID = 7,
 	EPHY_NODE_PAGE_PROP_PRIORITY = 8,
 	EPHY_NODE_PAGE_PROP_ICON = 9,
-	EPHY_NODE_HOST_PROP_ZOOM = 10
+	EPHY_NODE_HOST_PROP_ZOOM = 10,
+	EPHY_NODE_PAGE_PROP_GECKO_FLAGS = 11
 };
 
 struct _EphyHistory
