@@ -1,5 +1,12 @@
 2005-09-05  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/GlobalHistory.cpp:
+	* embed/ephy-history.h:
+
+	Implement [SG]etGeckoURIFlags for gecko 1.9.
+
+2005-09-05  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/mozilla/EphyUtils.cpp:
 
 	Mozilla printing code is braindead. Bug #163255.
